src/objects/SFTestRenameSObject__c.object
<CustomObject>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GeoLocationField__c</fullName>
        <label>GeoLocationField</label>
        <scale>2</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>NumberNotForDelete__c</fullName>
        <label>NumberNotForDelete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SFTestUpdateSObject__c</fullName>
        <label>SFTestUpdateSObjectDon&apos;tDelete</label>
        <referenceTo>SFTestUpdateSObject__c</referenceTo>
        <relationshipLabel>SFTestRenameSObjects</relationshipLabel>
        <relationshipName>SFTestRenameSObjects</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>SFTestRenameSObject</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SFTestRenameSObjects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>